feat: web app启用docker支持

--- a/src/Examples/ViewFaceCore.Demo.WebApp/Views/Home/Index.cshtml
+++ b/src/Examples/ViewFaceCore.Demo.WebApp/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">欢迎使用ViewFaceCore！</h1>
+    <div style="height:300px">
+        <button type="button" class="btn btn-primary">上传</button>
+    </div>
+
+
+    <p>Learn about <a href="https://github.com/ViewFaceCore/ViewFaceCore">building face recognition app with ViewFaceCore</a>.</p>
 </div>
